babttv/css/style.css
:root {
    --background-light: rgb(67, 72, 87);
    --background-dark: rgb(26, 28, 34);
    --background: rgb(37, 40, 48);
    --twitch: #6441a5;
}

select { width:100% }

.box {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--background-light);
    color: #fff;
    border-radius: 25px;
    padding: 20px;
    font-size: 150%;
    width:100%;
}

#main-grid-container {
    height: 100vh;
    display: grid;
    grid-template-rows: 10% 1fr 5%;
    grid-template-areas:
    "."
    "."
    ".";
}

.one-one { grid-column: 1; grid-row: 1; }
.full-size { height: 100%; width: 100%; }
.center { align-items: center; justify-items: center; }

#emote-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

#overview-toolbox {
    display: grid;
    grid-column: 2;
    grid-row: 1;
    grid-template-rows: 2fr 2fr 4fr 1fr;
    grid-template-columns: 1fr;
    grid-template-areas: "."
    "."
    "."
    "."
    ".";
}

#content-grid-container {
    padding: 3%;
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 0px 2.5%;
}

#toolbox-grid-container {
    display: grid;
    grid-column: 2;
    grid-row: 1;
    grid-template-rows: 0.8fr repeat(3, 1fr) 0.4fr;
    grid-template-columns: 1fr;
    grid-template-areas:
        "."
        "."
        "."
        ".";
}

.toolbox-row {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0px 2.5%;
    grid-template-areas: ". .";
}

.toolbox-row-3 {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 0px 2.5%;
    grid-template-areas: ". . .";
    justify-content: center;
    align-items: center;
}

.toolbox-row-3 * {
    justify-self: center;
}

.toolbox-row :first-child { justify-self: left; }
.toolbox-row :nth-child(2) { justify-self: center; }

header, footer {
    background-color: var(--background-dark);
    color: rgb(255, 255, 255);
    display: flex;
    justify-content: center;
    align-items: center;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
}


body {
    background-color: var(--background);
}

h1 {
    font-size: 350%;
}

#emote-name {
    width:100%;
    font-size: 250%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#page-selector {
    grid-row-end: -1;
}

#progress-container {
    display: grid;
    justify-content: center;
    align-items: flex-end;
}

#progress-image {
    width: 200px;
}

#progress-image-cover {
    background-color: var(--background-light);
    height: 200px;
    width: 200px;
}

#overview-link {
    grid-row-end: -1;
    width: 100%;
    font-size: larger;
}

.overview {
    z-index: -2;
}




#draw-border {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.btn {
    background: none;
    color: var(--twitch);
    border-radius: 0.25em;
    position: relative;
    outline: none;
    padding: 0.35em 1.2em;
    box-sizing: border-box;
    /* border: 0.1em solid var(--twitch); */
    text-decoration: none;
    margin: 10px;
    display: flex;
}

.btn::before,
.btn::after {
    box-sizing: inherit;
    position: absolute;
    content: '';
    border: 2px solid transparent;
    width: 0;
    height: 0;
}

.btn::after {
    bottom: 0;
    right: 0;
}

.btn::before {
    top: 0;
    left: 0;
}

.btn:hover::before,
.btn:hover::after {
    width: 100%;
    height: 100%;
}

.btn:hover::before {
    border-top-color: var(--twitch);
    border-right-color: var(--twitch);
    transition: width 0.3s ease-out, height 0.3s ease-out 0.3s;
}

.btn:hover::after {
    border-bottom-color: var(--twitch);
    border-left-color: var(--twitch);
    transition: border-color 0s ease-out 0.6s, width 0.3s ease-out 0.6s, height 0.3s ease-out 1s;
}

.breathing {
    transition: transform 0.5s;
}

.breathing:hover {
    transform: scale(1.25);
}

